--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Learning Compose</string>
     <string name="title_activity_home">Home</string>
+    <string name="show_more_text">Show More</string>
+    <string name="show_less_text">Show Less</string>
+    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi laoreet finibus ipsum at consequat. Nam vitae quam gravida, mattis diam in, consequat odio. Maecenas eu blandit erat. Cras luctus bibendum porta</string>
 </resources>
