--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="show_less_text">Show Less</string>
     <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi laoreet finibus ipsum at consequat. Nam vitae quam gravida, mattis diam in, consequat odio. Maecenas eu blandit erat. Cras luctus bibendum porta</string>
     <string name="title_activity_layouts">LayoutsActivity</string>
+    <string name="title_activity_layouts_codelab">LayoutsCodelabActivity</string>
 </resources>
