--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
     <string name="title_activity_layouts_list">LayoutsListActivity</string>
     <string name="title_activity_custom_layouts">CustomLayoutsActivity</string>
     <string name="title_activity_constraint_layout">ConstraintLayoutActivity</string>
+    <string name="title_activity_state">StateActivity</string>
+    <string name="cd_expand">Expand</string>
+    <string name="cd_collapse">Collapse</string>
+    <string name="cd_crop_square">Crop</string>
+    <string name="cd_done">Done</string>
+    <string name="cd_event">Event</string>
+    <string name="cd_privacy">Privacy</string>
+    <string name="cd_restore">Restore</string>
+    <string name="title_activity_todo">Todo Activity</string>
 </resources>
